--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-  <h1>Recipe4you</h1>
+  <h1>Recipe4You</h1>
 
-  <recipe></recipe>
+  <router-outlet></router-outlet>
 </main>
