--- a/src/app/components/recipes/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipes/recipe-view/recipe-view.component.html
@@ -9,10 +9,10 @@
       <div class="top toolbar">
         <p>%Author%</p>
         <div class="flex-spacer"></div>
-        <a (click)="router.nav_edit(recipe_id)"
+        <a class="no-style" (click)="router.nav_edit(recipe_id)"
           ><i class="fas" aria-hidden="true">&#xf044;</i></a
         >
-        <a (click)="router.nav_delete(recipe_id)"
+        <a class="no-style" (click)="router.nav_delete(recipe_id)"
           ><i class="fas" aria-hidden="true">&#xf2ed;</i></a
         >
       </div>
