--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="container">
-  <h1>Recipe4You</h1>
+<menubar></menubar>
 
+<main class="container">
   <router-outlet></router-outlet>
 </main>
