--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Recipes</h1>
   <ul class="no-style">
     <li *ngFor="let recipe of recipes | async; index as i">
       <recipe-preview [recipe]="recipe"></recipe-preview>
