Added editing feature

--- a/src/app/components/recipe/create/create.component.html
+++ b/src/app/components/recipe/create/create.component.html
@@ -1,143 +1,1 @@
-<div class="box">
-  <form #form="ngForm">
-    <p>To add a new recipe fill in all required fields first</p>
-
-    <!-- 
-      REQUIRED FIELDS
-     -->
-    <div class="form-group">
-      <!-- 
-        NAME FIELD 
-       -->
-      <div class="form-group">
-        <label for="name" class="required"> Name </label>
-        <label
-          [hidden]="name.valid || name.untouched"
-          class="alert alert-danger"
-          for="name"
-        >
-          Name is required!
-        </label>
-
-        <input
-          type="text"
-          class="form-control"
-          id="name"
-          placeholder="Name your recipe"
-          required
-          [(ngModel)]="recipe.name"
-          name="name"
-          #name="ngModel"
-        />
-      </div>
-
-      <!-- 
-        DESCRIPTION FIELD 
-       -->
-      <div class="form-group">
-        <label for="desciption" class="required"> Desciption </label>
-        <label
-          [hidden]="desciption.valid || desciption.untouched"
-          class="alert alert-danger"
-          for="desciption"
-        >
-          Desciption is required!
-        </label>
-
-        <textarea
-          class="vertical"
-          id="desciption"
-          placeholder="Describe your recipe"
-          required
-          [(ngModel)]="recipe.description"
-          name="desciption"
-          #desciption="ngModel"
-        ></textarea>
-      </div>
-
-      <!-- 
-        INGREDIENTS FIELD 
-       -->
-      <div class="form-group">
-        <label for="ingredients" class="required"> Ingredients </label>
-        <label
-          [hidden]="ingredients.valid || ingredients.untouched"
-          class="alert alert-danger"
-          for="ingredients"
-        >
-          Ingredients are required!
-        </label>
-
-        <input
-          type="text"
-          class="form-control"
-          id="ingredients"
-          placeholder="Ingredients for your recipe"
-          required
-          [(ngModel)]="recipe.ingredients"
-          name="ingredients"
-          #ingredients="ngModel"
-        />
-      </div>
-
-      <!-- 
-        METHOD FIELD 
-       -->
-      <div class="form-group">
-        <label for="method" class="required"> Method </label>
-        <label
-          [hidden]="method.valid || method.untouched"
-          class="alert alert-danger"
-          for="method"
-        >
-          Method is required!
-        </label>
-
-        <textarea
-          class="vertical large"
-          id="method"
-          placeholder="Method for your recipe"
-          required
-          [(ngModel)]="recipe.method"
-          name="method"
-          #method="ngModel"
-        ></textarea>
-      </div>
-
-      <!-- 
-        NOTES FIELD 
-       -->
-      <div class="form-group">
-        <label for="notes"> Notes </label>
-
-        <textarea
-          class="vertical large"
-          id="notes"
-          placeholder="Notes for your recipe"
-          [(ngModel)]="recipe.notes"
-          name="notes"
-          #notes="ngModel"
-        ></textarea>
-      </div>
-    </div>
-
-    <!-- 
-      OPTIONAL FIELDS
-     -->
-    <div class="form-group"></div>
-
-    <!-- 
-      SUBMIT BUTTON
-     -->
-    <div class="form-group">
-      <!-- 
-        SUBMIT BUTTON
-       -->
-      <div class="form-group">
-        <button type="button" class="no-stretch" (click)="onSubmit(form)">
-          Add recipe
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
+<recipe type="create"></recipe>
