--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,5 +1,5 @@
 <div class="box" *ngIf="recipe">
-  <form #form="ngForm">
+  <form #form="ngForm" *ngIf="type == 'create' || type == 'edit'">
     <p *ngIf="type == 'create'">
       To add a new recipe fill in all required fields first
     </p>
@@ -155,5 +155,23 @@
         </button>
       </div>
     </div>
+  </form>
+  <form #form="ngForm" *ngIf="type == 'delete'">
+    <p>
+      Are you sure, that you want to delete this recipe:<br />{{ recipe.name }}
+    </p>
+    <button
+      type="button"
+      class="no-stretch"
+      (click)="router.nav_recipe(recipe.id)"
+    >
+      cancel
+    </button>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;
+
+    <button type="button" class="no-stretch" (click)="onSubmit(form)">
+      Delete recipe
+    </button>
   </form>
 </div>
