--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -19,5 +19,7 @@
 
   &nbsp;&nbsp;&nbsp;&nbsp;
 
-  <div class="profile"></div>
+  <div class="profile">
+    <auth-profile></auth-profile>
+  </div>
 </div>
