--- a/src/app/components/menubar/menubar.component.scss
+++ b/src/app/components/menubar/menubar.component.scss
@@ -2,6 +2,7 @@
   font-size: 1.1em;
 
   display: flex;
+  align-items: center;
   padding: var(--unit-tiny);
   background-color: var(--color-foreground);
 
