--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,2 +1,16 @@
-<p>auth works!</p>
-<button class="signin google" (click)="auth.signIn_google()">GOOGLE</button>
+<div class="box">
+  <form>
+    <p>
+      To create/edit/delete your own favourite recipes or to bookmark recipes
+      you have to log in.
+    </p>
+    <div class="form-group">
+      <div class="form-group">
+        <button class="signin google" (click)="auth.signIn_google()">
+          <img src="/assets/images/logos/google.svg" />
+          <span>Login with Google</span>
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
