Added bookmark link to navbar (todo: bookmarks)

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -19,6 +19,12 @@
 
   &nbsp;&nbsp;&nbsp;&nbsp;
 
+  <a class="no-style" (click)="router.nav_bookmarks()">
+    <i class="fas" aria-hidden="true">&#xf02e;</i>
+  </a>
+
+  &nbsp;&nbsp;&nbsp;&nbsp;
+
   <div class="profile">
     <auth-profile></auth-profile>
   </div>
