Added install button for chrome

--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -13,6 +13,12 @@
 
   <div class="flex-spacer"></div>
 
+  <a id="install" class="no-style" hidden>
+    <i class="fas" aria-hidden="true">&#xf019;</i>
+  </a>
+
+  &nbsp;&nbsp;&nbsp;&nbsp;
+
   <a class="no-style" (click)="router.nav_create()">
     <i class="far" aria-hidden="true">&#xf0fe;</i>
   </a>
