--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -41,11 +41,12 @@ main {
   margin: 2em max(calc(1em + 20vmin - 120px), 0px);
   margin-bottom: 0;
 }
-a:not(.no-style) {
-  color: var(--color-accent);
-}
+
 a {
   cursor: pointer;
+  &:not(.no-style) {
+    color: var(--color-accent);
+  }
 }
 
 .clickable {
