--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -1,4 +1,4 @@
-<div class="menubar">
+<div class="menubar box small">
   <p class="clickable" (click)="router.nav_home()">Recipe4You</p>
 
   &nbsp;&nbsp;&nbsp;&nbsp;
