--- a/src/SCSS/font.scss
+++ b/src/SCSS/font.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   --font-size-h1: 1.5em;
@@ -17,7 +18,7 @@ body {
 }
 
 * {
-  font-family: "Roboto", Times, serif;
+  font-family: "Poppins", "Roboto", Times, serif;
   line-height: 1;
 }
 
