--- a/src/SCSS/scrollbar.scss
+++ b/src/SCSS/scrollbar.scss
@@ -1,12 +1,12 @@
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 12px; /* for vertical scrollbars */
-  height: 12px; /* for horizontal scrollbars */
+  width: 0.5em; /* for vertical scrollbars */
+  height: 0.5em; /* for horizontal scrollbars */
 }
 ::-webkit-scrollbar-track {
-  background: var(--color-foreground);
+  background: var(--colors-background-secondary);
 }
 ::-webkit-scrollbar-thumb {
-  background: var(--color-highlight);
+  background: var(--color-font);
   border-radius: 99999em;
 }
