--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,4 +1,4 @@
-<div class="box" *ngIf="recipe">
+<div class="" *ngIf="recipe">
   <form #form="ngForm" *ngIf="type == 'create' || type == 'edit'">
     <p *ngIf="type == 'create'">
       To add a new recipe fill in all required fields first
