--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -1,6 +1,6 @@
 <ng-template [ngIf]="setup" [ngIfElse]="loading">
   <ng-template [ngIf]="recipe" [ngIfElse]="no_recipe">
-    <div class="">
+    <div class="box-indent">
       <!-- 
         TOP-TOOLBAR
        -->
