Fixed bugs, refined UI and supported smaller devices 👏

--- a/src/app/components/auth/profile/profile.component.html
+++ b/src/app/components/auth/profile/profile.component.html
@@ -14,7 +14,7 @@
     <button class="tiny" (click)="router.nav_login()">login</button>
   </ng-template>
 
-  <div class="popover box small" *ngIf="popover">
+  <div class="popover box blur small" *ngIf="popover">
     <img [src]="auth.userPublicData.photoURL" alt="profile" />
     <h3>{{ auth.displayName_or_email }}</h3>
     <button (click)="auth.signOut(); popover = false">logout</button>
