--- a/src/SCSS/font.scss
+++ b/src/SCSS/font.scss
@@ -36,7 +36,9 @@ h6 {
 }
 h1 {
   font-size: var(--font-size-h1);
+  font-weight: 700;
 }
 h2 {
   font-size: var(--font-size-h2);
+  font-weight: 600;
 }
