--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -3,21 +3,13 @@
   --colors-red: #eb4d4b;
   --colors-light-blue: #426696;
 
-  --colors-background-primary: #65dfc9;
-  --colors-background-secondary: #6cdbeb;
-
+  --color-background: #6cdbeb;
   --color-selection: #27ae60;
-
-  --bg-grad: linear-gradient(
-    to right,
-    var(--colors-background-primary),
-    var(--colors-background-secondary)
-  );
 
   --bg-glass: linear-gradient(
     to left top,
     rgba(255, 255, 255, 0.2),
-    rgba(255, 255, 255, 0.3)
+    rgba(255, 255, 255, 0.4)
   );
 
   --color-font: var(--colors-light-blue);
@@ -41,20 +33,18 @@ body {
 
 * {
   box-sizing: border-box;
-  overscroll-behavior: none;
 }
 html {
   min-height: 100vh;
 }
 body {
-  background: var(--bg-grad);
+  background-color: var(--color-background);
 }
 .content {
-  // margin: var(--unit-large) var(--unit-auto);
   margin: var(--unit-auto) var(--unit-auto);
   background: var(--bg-glass);
   border-radius: var(--unit-large);
-  backdrop-filter: blur(2rem);
+
   overflow: hidden;
 }
 
@@ -87,11 +77,11 @@ ul.no-style {
 }
 
 /* BOX */
+
 .box {
   padding: var(--unit-normal);
 
   background: var(--bg-glass);
-  box-shadow: 0.5em 0.5em 20px rgba(122, 122, 122, 0.2);
 
   border-radius: var(--unit-normal);
 
@@ -113,6 +103,10 @@ ul.no-style {
   &.clickable:hover {
     transform: scale(1.05);
   }
+}
+
+.blur {
+  backdrop-filter: blur(0.1em);
 }
 
 .box,
