New Icons, refactored, refined 😇

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="box-indent small">
   <form>
     <p>
       To create/edit/delete your own favourite recipes or to bookmark recipes
