--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -3,14 +3,17 @@
   --colors-red: #eb4d4b;
   --colors-light-blue: #426696;
 
+  // IF CHANGED CHANGE IN INDEX.html THEME META TAG AND MANIFEST (BACKGROUND + THEME COLOR)
   --color-background: #6cdbeb;
   --color-selection: #27ae60;
 
   --bg-glass: linear-gradient(
     to left top,
-    rgba(255, 255, 255, 0.2),
-    rgba(255, 255, 255, 0.4)
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.35)
   );
+
+  --bs-glass: 0.5em 0.5em 20px rgba(122, 122, 122, 0.2);
 
   --color-font: var(--colors-light-blue);
   --color-font-headline: var(--colors-white);
@@ -43,6 +46,7 @@ body {
 .content {
   margin: var(--unit-auto) var(--unit-auto);
   background: var(--bg-glass);
+  box-shadow: var(--bs-glass);
   border-radius: var(--unit-large);
 
   overflow: hidden;
@@ -82,6 +86,7 @@ ul.no-style {
   padding: var(--unit-normal);
 
   background: var(--bg-glass);
+  box-shadow: var(--bs-glass);
 
   border-radius: var(--unit-normal);
 
@@ -103,10 +108,6 @@ ul.no-style {
   &.clickable:hover {
     transform: scale(1.05);
   }
-}
-
-.blur {
-  backdrop-filter: blur(0.1em);
 }
 
 .box,
@@ -139,7 +140,6 @@ ul.no-style {
   flex-basis: unset !important;
 }
 .flex-spacer {
-  // width: auto;
   flex-grow: 1;
 }
 
