--- a/src/app/components/menubar/menubar.component.scss
+++ b/src/app/components/menubar/menubar.component.scss
@@ -3,10 +3,14 @@
   padding-top: var(--unit-large);
   padding-bottom: var(--unit-small);
 
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+
   > div {
     font-size: 1.1em;
 
-    padding-inline: var(--unit-small);
+    padding-left: var(--unit-small);
+    padding-right: var(--unit-small);
 
     display: flex;
     align-items: center;
