--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,4 +1,8 @@
-<div class="" *ngIf="recipe">
+<div
+  class="box-indent small"
+  style="padding-left: 0; padding-right: 0"
+  *ngIf="recipe"
+>
   <form #form="ngForm" *ngIf="type == 'create' || type == 'edit'">
     <p *ngIf="type == 'create'">
       To add a new recipe fill in all required fields first
