--- a/src/app/components/bookmarks/bookmarks.component.html
+++ b/src/app/components/bookmarks/bookmarks.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="box-indent small">
+  <div class="box nostyle">
     <h1>Bookmarks</h1>
     <p>
       Below are all recipes that you have bookmarked so you can find your
