--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="box-indent small">
+  <div class="box nostyle">
     <h1>Recipes</h1>
     <p>
       Food is important, food is delicious but cooking food is often scary and
