--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -146,7 +146,10 @@ ul.no-style {
   flex-basis: unset !important;
 }
 .flex-spacer {
-  flex-grow: 1;
+  // flex-grow: 1 !important;
+  flex: 1 1 0% !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .spacer {
