Not found, refactored 👏

--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -61,7 +61,9 @@
   </ng-template>
 
   <ng-template #no_recipe>
-    <p>NO RECIPE</p>
+    <div class="box nostyle">
+      <not-found-recipe></not-found-recipe>
+    </div>
   </ng-template>
 </ng-template>
 
