--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -50,7 +50,8 @@ body {
 main {
   // padding-top: var(--unit-normal);
   padding-right: max(var(--unit-auto), env(safe-area-inset-right));
-  padding-bottom: max(var(--unit-auto), env(safe-area-inset-bottom));
+  // padding-bottom: max(var(--unit-auto), env(safe-area-inset-bottom));
+  padding-bottom: var(--unit-auto);
   padding-left: max(var(--unit-auto), env(safe-area-inset-left));
 }
 
