--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<div class="not-found">
+  <h1>404</h1>
+  <p>
+    Whoooops!<br />
+    It seems that <ng-content></ng-content> does not exist!
+  </p>
+</div>
