Home preview Grid flexbox 🔥

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
     </p>
   </div>
 
-  <ul class="no-style">
+  <ul class="recipe-list no-style">
     <li *ngFor="let recipe of recipes | async; index as i">
       <recipe-preview [recipe]="recipe"></recipe-preview>
     </li>
